 I think it's not required to call msk_init_yukon() in msk_attach(). Fixes PR kern/54261 reported by David shao.